@@ -1,3 +1,8 @@
+2006-04-23  Ales Hakl  <ales at hakl dot net>
+
+	* src/stream.c (tokenizer_process): support for boolean and
+	character escapes
+
 2006-04-22  Ales Hakl  <ales at hakl dot net>
 
 	* src/dfsch.c: tail escape descriptor should (probably) be
